--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.02 Wed Jul 23 14:31:34 PDT 2014
+ - Inline text and grammar into Grammar class.
+
 0.01 Tue Jul 22 19:04:24 PDT 2014
  - First release
 
