--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.03 Mon Aug  4 00:03:51 PDT 2014
+ - Remove (c) from Copyright
+
 0.02 Wed Jul 23 14:31:34 PDT 2014
  - Inline text and grammar into Grammar class.
 
