--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.04 Fri Aug 15 20:20:05 PDT 2014
+ - Add t/000-compile-modules.t
+
 0.03 Mon Aug  4 00:03:51 PDT 2014
  - Remove (c) from Copyright
 
